test/scc/lex/errors/003.a
003.t:1:1: error: empty character constant